--- a/xcx/xcx_controller/pom.xml
+++ b/xcx/xcx_controller/pom.xml
@@ -214,7 +214,11 @@
 		        <version>1.0.8</version>
 		    </dependency>
 
-
+			  <dependency>
+                <groupId>net.coobird</groupId>
+                <artifactId>thumbnailator</artifactId>
+                <version>0.4.8</version>
+            </dependency>
 
 
 			
