--- a/xcx/xcx_controller/src/main/resources/jdbc.properties
+++ b/xcx/xcx_controller/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 
 
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://121.199.182.2:30001/hrm_bf?characterEncoding=UTF-8&allowMultiQueries=true
+url=jdbc:mysql://127.0.0.1:30001/xcx_db?characterEncoding=UTF-8&allowMultiQueries=true
 username=root
-password=root
+password=666666
 
